# cuda-from-scratch

./: .clang-format  .pre-commit-config.yaml  0-vecadd-memory-coalesce.cu  1-hello.cu  1-matrix-transpose-coalesce.cu  2-reduce.cu  2-sum-array.cu  3-gemm.cu  3-sum-matrix-2d-grid-2d-block.cu  4-warp-divergence.cu  5-device-info.cu  6-expose-parallelism.cu  7-pinned-memory.cu  8-cached-visit.cu  CMakeLists.txt  Makefile  common.cuh  common.h  dump-gpu-props.cpp  expose-parallelism.sh  helper.h  model.py  profile-reduce.py  warp-shuffle-quickstart.cu
cute/: benchmarker.py  elementwise.py  reduce.py  test_elementwise.py
gemm-kernel/: benchmark.py  cuda-kernel.cuh  launcher.cu
matmul/: 1-baseline-host.cc  2-baseline.cu  CMakeLists.txt  README.org  common.h
matrix-transpose-kernel/: benchmark.py  cuda-kernel.cu
matrix_transpose/: CMakeLists.txt  README.org  baseline.cu
